@@ -1,4 +1,12 @@
-Serf 1.3.0 [2013-07-23, from /tags/1.3.0]
+Serf 1.3.1 [??-??-??, from /tags/1.3.1, r????]
+  Fix issue 114: ssl/tls renegotiation fails
+  Fix issue 113: add gssapi libs in the serf pc file
+  Fix issue 116: scons check should return non-zero exit staths
+  Fix issue 115: Setting RPATH on Solaris broken in SConstruct
+  Mac OS X: Fix scons --install-sandbox
+  Solaris: Fix build with cc, don't use unsupported compiler flags
+  
+Serf 1.3.0 [2013-07-23, from /tags/1.3.0, r2074]
   Fix issue 83: use PATH rather than URI within an ssltunnel (r1952)
   Fix issue 108: improved error reporting from the underlying socket (r1951)
   NEW: Switch to the SCons build system; retire serfmake, serf.mak, autotools
